fixing 'view favorite' on tablet-attempt five

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,7 +360,7 @@ body {
   animation: gradient 3s ease infinite;
   background-position: right;
   text-decoration: none;
-  font-size: 1.125rem;
+  font-size: 1.05rem;
 }
 
 /* Card Styles end */
